--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,9 @@
 {
+  "trailingComma": "none",
+  "tabWidth": 2,
+  "useTabs": true,
+  "semi": false,
+  "printWidth": 80,
   "singleQuote": true,
-  "trailingComma": "all"
+  "arrowParens": "avoid"
 }
